D. Pakman Show: Right wing obsession with Ayn Rand.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1927,6 +1927,14 @@
           (YouTube, 5 minutes, 04.11.2017). About the vote abolishing a Consumer Financial Protection Bureau regulation
           that allowed consumers to sue banks and credit agencies.
       </li>
+      <li>David Pakman Show:
+        <a href="https://www.youtube.com/watch?v=tmaGnH2Y65M">How Did Right Wingers Get So Obsessed with Ayn Rand?</a>
+        (YouTube, 9 minutes, 18.06.2016). 
+        Interview with Stephen L. Goldstein, author of <i class="booktitle">Atlas Drugged: Ayn Rand Be Damned</i>
+        (Hellgate Press, 2012, <a href="https://hellgatepress.com/stephen-l-goldstein/atlas-drugged"><abbr>ISBN</abbr> 978-1-55571-709-4</a>).
+        Ayn Rand was not a theorist of neoliberalism but gave capitalists an amoral view of the world that encouraged selfishness.
+        Like Ayn Rand, neoliberalism says that government is bad.
+      </li>
       <li>Democracy Now!:
         <a href="https://www.youtube.com/watch?v=qhuGU5LS0IE">David Cay Johnston: Class War Is Being Waged by the Rich Against the Poor</a>
         (YouTube, 14 minutes, 21.01.2015).
