Owen: Top 10 books about consciousness.

--- a/science/index.html
+++ b/science/index.html
@@ -923,6 +923,43 @@
         <a href="https://www.youtube.com/watch?v=fyovWBAgCnc">Is Psychology a Science?</a>
         (YouTube, 9 minutes, 28.01.2013).
       </li>
+      <li>Owen, Adrian:
+        <a href="https://www.theguardian.com/books/2017/sep/20/top-10-books-about-consciousness">Top 10 books about consciousness</a>,
+        <i class="newspaper">The Guardian</i>, 20.09.2017. The ten books are:
+        <!--@@add publication dates-->
+        <ol>
+          <li>Dennett, Daniel:
+            <i class="booktitle">Consciousness Explained</i>.
+          </li>
+          <li>Godfrey-Smith, Peter:
+            <i class="booktitle">Other Minds: The Octopus, the Sea and the Deep Origins of Consciousness</i>.
+          </li>
+          <li>Bauby, Jean-Dominique:
+            <i class="booktitle">The Diving Bell and the Butterfly</i>.
+          </li>
+          <li>Saks, Elyn R.:
+            <i class="booktitle">The Centre Cannot Hold: My Journey Through Madness</i>.
+          </li>
+          <li>Jaynes, Julian:
+            <i class="booktitle">The Origin of Consciousness in the Breakdown of the Bicameral Mind</i>.
+          </li>
+          <li>Crick, Francis:
+            <i class="booktitle">The Astonishing Hypothesis: The Scientific Search for the Soul</i>.
+          </li>
+          <li>Tononi, Giulio:
+            <i class="booktitle">Phi: A Voyage from the Brain to the Soul</i>.
+          </li>
+          <li>Frith, Chris:
+            <i class="booktitle">Making Up the Mind: How the Brain Creates Our Mental World</i>.
+          </li>
+          <li>Ramachandran, V.S.; Blakeslee, Sandra:
+            <i class="booktitle">Phantoms in the Brain: Probing the Mysteries of the Human Mind</i>.
+          </li>
+          <li>Warren, Jeff:
+            <i class="booktitle">The Head Trip: Adventures on the Wheel of Consciousness</i>.
+          </li>
+        </ol>
+      </li>
     </ul>
 
     <h2>Unsorted Links</h2>
