--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -157,6 +157,10 @@
         <a href="https://www.theguardian.com/inequality/2017/aug/08/rise-of-the-racist-robots-how-ai-is-learning-all-our-worst-impulses">Rise of the racist robots – how <abbr>AI</abbr> is learning all our worst impulses</a>,
         <i class="newspaper">The Guardian</i>, 08.08.2017.
       </li>
+      <li>Harland, James:
+        <a href="https://theconversation.com/artificial-intelligence-researchers-must-learn-ethics-82754">Artificial intelligence researchers must learn ethics</a>,
+        <i class="website">The Conversation</i>, 29.08.2017.
+      </li>
       <li>O'Neil, Cathy:
         <a href="https://www.youtube.com/watch?v=_2u_eHHzRto">The era of blind faith in big data must end</a>
         <i class="conference"><!--@@CSS class--><abbr>TED</abbr></i> (YouTube, 13 minutes, 07.09.2017).
