Beuth: Mitreden bei der Automatisierung der Welt.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -207,6 +207,10 @@
         <a href="https://www.techemergence.com/ethics-artificial-intelligence-business-leaders/">The Ethics of Artificial Intelligence for Business Leaders – Should Anyone Care?</a>,
         <i class="website">TechEmergence</i>, 03.12.2017.
       </li>
+      <li lang="de">Beuth, Patrick:
+        <a href="http://www.zeit.de/digital/internet/2017-12/algorithmen-algorithmwatch-bertelsmann-stiftung">Mitreden bei der Automatisierung der Welt</a>,
+        <i class="newspaper">Zeit Online</i>, 07.12.2017.
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
