Hiner: AI and jobs.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -286,6 +286,10 @@
         <a href="https://www.latribune.fr/technos-medias/intelligence-artificielle-quelles-pistes-pour-placer-la-france-dans-la-competition-mondiale-759819.html">Intelligence artificielle&nbsp;: quelles pistes pour placer la France dans la compétition mondiale&nbsp;?</a>,
         <i class="newspaper">La Tribune</i>, 30.11.2017.
       </li>
+      <li>Hiner, Jason:
+        <a href="http://www.zdnet.com/article/ai-and-jobs-where-humans-are-better-than-algorithms-and-vise-versa/"><abbr>AI</abbr> and jobs: Where humans are better than algorithms, and vice versa</a>,
+        <i class="website"><abbr>ZD</abbr>Net, 03.12.2017.
+      </li>
       <li><a href="http://moralmachine.mit.edu/">Moral Machine</a>:
         <q>A platform for public participation in and discussion of the human perspective on machine-made moral decisions</q>.
       </li>
