Law: best books on pseudoscience.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -810,6 +810,11 @@
         (YouTube, 15 minutes, 17.01.2017): recording of an invited talk at the conference
         <span lang="de">Menopause, Andropause, Anti-Aging 2016</span> in Vienna, 09.10.2016.
       </li>
+      <li>Law, Stephen:
+        <a href="https://fivebooks.com/best-books/stephen-law-on-pseudoscience/">The best books on Pseudoscience</a>,
+        <i class="website">Five Books</i>, March 2015.
+        <!--@@list books-->
+      </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
