Knight: US leads in AI ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -290,6 +290,10 @@
         <a href="http://www.zdnet.com/article/ai-and-jobs-where-humans-are-better-than-algorithms-and-vise-versa/"><abbr>AI</abbr> and jobs: Where humans are better than algorithms, and vice versa</a>,
         <i class="website"><abbr>ZD</abbr>Net, 03.12.2017.
       </li>
+      <li>Knight, Will:
+        <a href="https://www.technologyreview.com/s/609610/the-us-leads-in-artificial-intelligence-but-for-how-long/">The U.S. Leads in Artificial Intelligence, but for How Long?</a>,
+        <i class="magzine"><abbr>MIT</abbr> Technology Review, 06.12.2017.
+      </li>
       <li><a href="http://moralmachine.mit.edu/">Moral Machine</a>:
         <q>A platform for public participation in and discussion of the human perspective on machine-made moral decisions</q>.
       </li>
