Dockrill: Google's AI mastered chess ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -294,6 +294,10 @@
         <a href="https://www.technologyreview.com/s/609610/the-us-leads-in-artificial-intelligence-but-for-how-long/">The U.S. Leads in Artificial Intelligence, but for How Long?</a>,
         <i class="magzine"><abbr>MIT</abbr> Technology Review, 06.12.2017.
       </li>
+      <li>Dockrill, Peter:
+        <a href="https://futurism.com/4-hours-googles-ai-mastered-chess-knowledge-history/">In Just 4 Hours, Google’s <abbr>AI</abbr> Mastered All The Chess Knowledge in History</a>,
+        <i class="website">Futurism</i>, 07.12.2017.
+      </li>
       <li><a href="http://moralmachine.mit.edu/">Moral Machine</a>:
         <q>A platform for public participation in and discussion of the human perspective on machine-made moral decisions</q>.
       </li>
