Democracy Now on tax cuts for the rich.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -2041,6 +2041,12 @@
         which cites the article <a href="https://thinkprogress.org/leaving-homeless-person-on-the-streets-31-065-giving-them-housing-10-051-3107834a8632/">Leaving Homeless Person On The Streets: $31,065. Giving Them Housing: $10,051</a>
         by Scott Keyes (ThinkProgress, 27.05.2014).
       </li>
+      <li>Democracy Now!:
+        <a href="https://www.youtube.com/watch?v=ot-fkmcQo6E">Republicans Agree on Tax Bill “Of, By and For the Political Donor Class” with Tax Cuts for the Rich</a>
+        (YouTube, 12 minutes 14.12.2017).
+        Donald Trump (emphasis added), <q cite="https://youtu.be/ot-fkmcQo6E?t=40s">Our tax cuts will <strong>break down, and they'll break it down fast, all forms of government</strong> and all forms of government barriers, and breathe new life into the American economy.</q>.
+        The video also includes criticism by Bernie Sanders and an interview with David Cay Johnston, who published a book about Donald Trump.
+      </li>
     </ul>
 
     <h3>The War Machine</h3>
