Trump's & Reagan's anti-government stance.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -2046,6 +2046,12 @@
         (YouTube, 12 minutes 14.12.2017).
         Donald Trump (emphasis added), <q cite="https://youtu.be/ot-fkmcQo6E?t=40s">Our tax cuts will <strong>break down, and they'll break it down fast, all forms of government</strong> and all forms of government barriers, and breathe new life into the American economy.</q>.
         The video also includes criticism by Bernie Sanders and an interview with David Cay Johnston, who published a book about Donald Trump.
+        <br />On 14 December 2017, <a href="https://twitter.com/realdonaldtrump/status/941406242785955841">Donald Trump tweeted</a>:
+        <blockquote><p>In 1960, there were approximately 20,000 pages in the Code of Federal Regulations. Today there are over 185,000 pages, as seen in the Roosevelt Room.</p>
+          <p>Today, we CUT THE RED TAPE! It is time to SET FREE OUR DREAMS and MAKE AMERICA GREAT AGAIN!</p>
+        </blockquote>
+        For a similar attitude towards government was expressed in <a href="https://www.youtube.com/watch?v=hpPt7xGx4Xo" title="Reagan's 1981 inaugural address, in full, on C-SPAN">Ronald Reagan's 1981 inaugural address</a>:
+        <q cite="https://youtu.be/hpPt7xGx4Xo?t=4m20s">In this present crisis, government is not the solution to our problem, government <em>is</em> the problem.</q>
       </li>
     </ul>
 
