Park & Warburton: fuel of philosophers

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1355,7 +1355,7 @@
         <a href="https://aeon.co/ideas/arabic-translators-did-far-more-than-just-preserve-greek-philosophy">Arabic translators did far more than just preserve Greek philosophy</a>,
         <i class="magazine">Aeon</i>, no date. Licence: <abbr title="Creative Commons Attribution-NoDerivatives">CC BY-ND</abbr>.
       </li>
-      <li>Hristo Vassilev:
+      <li>Vassilev, Hristo:
         <a href="https://dailystoic.com/books-on-stoicism/">28 Books On Stoicism: The (Hopefully) Ultimate Reading List</a>,
         <i class="website">Daily Stoic</i> (September 2017?).
       </li>
@@ -1364,11 +1364,11 @@
         <q>From the existence of the self to the nature of free will, many philosophers have dedicated their lives to the problems of the mind. But now some neuroscientists claim to have settled these raging debates. Is it possible we have discovered a science to replace philosophy and we can finally make real progress?</q>
         Panel with Margaret Boden, Steven Rose and Barry C Smith.
       </li>
-      <li>Nigel Warburton:
+      <li>Warburton, Nigel:
         <a href="https://aeon.co/essays/without-conversation-philosophy-is-just-dogma">Talk with me / >Without conversation, philosophy is just dogma</a>,
         <i class="magazine">Aeon</i>, no date (September/October 2017).
       </li>
-      <li>Robert Talisse:
+      <li>Talisse, Robert:
         <a href="https://fivebooks.com/interview/robert-talisse-on-pragmatism/">The best books on Pragmatism</a>,
         <i class="website">Five Books</i> (October 2017?).
         The five recommendations are the following:
@@ -1423,6 +1423,10 @@
       <li>Royal Institute of Philosophy:
         <a href="https://twitter.com/RoyalInstPhilos/status/919466354528411649">Lego Plato's Cave</a>
         (Twitter, 15.10.2017).
+      </li>
+      <li>Park, Andrew; Warburton, Nigel:
+        <a href="https://www.illustratedphilosopher.com/episodes/the-fuel-of-philosophers">The Fuel of Philosophers</a>,
+        <i class="website">Illustrated Philosopher</i>, 11.12.2017.
       </li>
     </ul>
     <h3>The Philosopher's Restaurant</h3>
