--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -305,6 +305,11 @@
       <li><a href="http://moralmachine.mit.edu/">Moral Machine</a>:
         <q>A platform for public participation in and discussion of the human perspective on machine-made moral decisions</q>.
       </li>
+      <li>Le, James:
+        <a href="https://towardsdatascience.com/the-10-statistical-techniques-data-scientists-need-to-master-1ef6dbd531f7">The 10 Statistical Techniques Data Scientists Need to Master</a>,
+        <i class="blog">Towards Data Science</i>, 30.10.2017.
+      </li>
+      <!--BMBF: Innovationsschub mit Künstlicher Intelligenz, 12.09.2017: https://www.bmbf.de/de/innovationsschub-mit-kuenstlicher-intelligenz-4781.html -->
     </ul>
 
   </main>
