Themenportal Europäische Geschichte.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -495,6 +495,10 @@
         <a href="http://yalebooks.co.uk/display.asp?K=9780300176148"><i class="booktitle">A Little History of the World</i></a>.
       </li>
       <li>
+        <a href="http://www.europa.clio-online.de/" hreflang="de" lang="de">Themenportal Europäische Geschichte</a>.
+        <!--@@history-->
+      </li>
+      <li>
         <a href="https://podio.com/site/creative-routines">The Daily Routines of Famous Creative People</a>,
         <i class="website">Podio</i>, no date.
       </li>
