Monbio: Out of the Wreckage (2017).

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1687,28 +1687,36 @@
       <li>Background:
         <a href="https://en.wikipedia.org/wiki/Liberal">Liberal</a> (on Wikipedia): a term with many different meanings.
       </li>
-      <li>Monbiot, George:
-        <a href="https://www.theguardian.com/books/2016/apr/15/neoliberalism-ideology-problem-george-monbiot">Neoliberalism – the ideology at the root of all our problems</a>,
-        <i class="newspaper">The Guardian</i>, 15 April 2016.
-        <blockquote><p>Imagine if the people of the Soviet Union had never heard of communism. 
-          The ideology that dominates our lives has, for most of us, no name. 
-          Mention it in conversation and you’ll be rewarded with a shrug. 
-          Even if your listeners have heard the term before, they will struggle to define it. 
-          Neoliberalism: do you know what it is?</p>
-        </blockquote>
-      </li>
-      <li>Verso books:
-        <a href="https://www.youtube.com/watch?v=Z7MFJ4EFezQ">Neoliberalism, Climate Change, Migration: George Monbiot in conversation with Verso</a>
-        (YouTube, 17 minutes, 15.03.2017).
-        (Short excerpts from the previous video:
-        <a href="https://www.youtube.com/watch?v=uRffgKRnLMU">George Monbiot: Are Brexit and Trump Neoliberal?</a>,
-        <a href="https://www.youtube.com/watch?v=65usnzkhiR0">George Monbiot: "We have sixty years of harvest left"</a>,
-        <a href="https://www.youtube.com/watch?v=UuMntvVwwWM">George Monbiot on Neoliberalism: "A self-serving racket"</a>,
-        <a href="https://www.youtube.com/watch?v=QysA6KxTiCs">"Immigration is going to remain a huge issue for a very long time"</a>.)
-      </li>
-      <li>Verso Books:
-        <a href="https://www.youtube.com/watch?v=M2SxP4PANr4">We need to radically reorganise politics: George Monbiot in conversation with Verso Books</a>
-        (YouTube, 16 minutes, 21.09.2017).
+      <li>George Monbiot:
+        <ul>
+          <li>Monbiot, George:
+            <a href="https://www.theguardian.com/books/2016/apr/15/neoliberalism-ideology-problem-george-monbiot">Neoliberalism – the ideology at the root of all our problems</a>,
+            <i class="newspaper">The Guardian</i>, 15 April 2016.
+            <blockquote><p>Imagine if the people of the Soviet Union had never heard of communism. 
+              The ideology that dominates our lives has, for most of us, no name. 
+              Mention it in conversation and you’ll be rewarded with a shrug. 
+              Even if your listeners have heard the term before, they will struggle to define it. 
+              Neoliberalism: do you know what it is?</p>
+            </blockquote>
+          </li>
+          <li>Monbiot, George:
+            <i class="booktitle">Out of the Wreckage: A New Politics for an Age of Crisis</i>.
+            Verso, 2017. <a href="https://www.versobooks.com/books/2571-out-of-the-wreckage"><abbr>ISBN</abbr> 9781786632883</a>.
+          </li>
+          <li>Verso books:
+            <a href="https://www.youtube.com/watch?v=Z7MFJ4EFezQ">Neoliberalism, Climate Change, Migration: George Monbiot in conversation with Verso</a>
+            (YouTube, 17 minutes, 15.03.2017).
+            (Short excerpts from the previous video:
+            <a href="https://www.youtube.com/watch?v=uRffgKRnLMU">George Monbiot: Are Brexit and Trump Neoliberal?</a>,
+            <a href="https://www.youtube.com/watch?v=65usnzkhiR0">George Monbiot: "We have sixty years of harvest left"</a>,
+            <a href="https://www.youtube.com/watch?v=UuMntvVwwWM">George Monbiot on Neoliberalism: "A self-serving racket"</a>,
+            <a href="https://www.youtube.com/watch?v=QysA6KxTiCs">"Immigration is going to remain a huge issue for a very long time"</a>.)
+          </li>
+          <li>Verso Books:
+            <a href="https://www.youtube.com/watch?v=M2SxP4PANr4">We need to radically reorganise politics: George Monbiot in conversation with Verso Books</a>
+            (YouTube, 16 minutes, 21.09.2017).
+          </li>
+        </ul>
       </li>
       <li><abbr title="The Young Turks">TYT</abbr> Politics:
         <a href="https://www.youtube.com/watch?v=cWzCpuXAJNY">Welcome To The End Of Neoliberalism</a>
