Jackson: Harvard prof book recommendations

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -543,6 +543,16 @@
         <a href="https://www.scientificamerican.com/article/the-unfortunate-fallout-of-campus-postmodernism/">The Unfortunate Fallout of Campus Postmodernism</a>,
         <i class="magazine">Scientific American</i>, September 2017.
       </li>
+      <li>Jackson, Abby:
+        <a href="http://www.businessinsider.de/harvard-university-professors-book-recommendations-2017-12?op=1">The one book every student should read in 2018, according to Harvard professors</a>,
+        <i class="website">Business Insider</i>, 18.12.2017.
+        <br />The books are Tolstoy's <i class="booktitle">Anna Karenina</i> (recommended by Claudia Goldin),
+        <i class="booktitle">The Internationalists</i> by Oona Hathaway and Scott Shapiro (recommended by Steven Pinker),
+        <i class="booktitle">Just Mercy</i> by Bryan Stevenson (recommended by Stephen Greenblatt),
+        <i class="booktitle">The Theory of Moral Sentiments</i> by Adam Smith (recommended by Eric Maskin) and
+        <i class="booktitle">Robot-Proof: Higher Education in the Age of Artificial Intelligence</i> by Joseph Aoun (recommended by E.J. Corey).
+        <!--@@check books in detail-->
+      </li>
     </ul>
 
     <!--@@separate "Two Culture" page?-->
