J. Dore Show: Amazon Drivers (The Mirror)

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1920,7 +1920,7 @@
         <i class="newspaper">The Guardian</i>, 15.10.2017. This book discusses two books on oligarchies in Ancient Greece:
         <ul>
           <li>Winters, Jeffrey A.:
-            <i class="booktitle">Oligarchu</i>. Cambridge University Press, 2011. (344 pages)
+            <i class="booktitle">Oligarchy</i>. Cambridge University Press, 2011. (344 pages)
             <a href="http://www.cambridge.org/de/academic/subjects/politics-international-relations/politics-general-interest/oligarchy?format=PB"><abbr>ISBN</abbr> 978-0521182980</a>.
           </li>
           <li>Simonton, Matthew:
@@ -2068,6 +2068,14 @@
         </blockquote>
         For a similar attitude towards government was expressed in <a href="https://www.youtube.com/watch?v=hpPt7xGx4Xo" title="Reagan's 1981 inaugural address, in full, on C-SPAN">Ronald Reagan's 1981 inaugural address</a>:
         <q cite="https://youtu.be/hpPt7xGx4Xo?t=4m20s">In this present crisis, government is not the solution to our problem, government <em>is</em> the problem.</q>
+      </li>
+      <li>The Jimmy Dore Show:
+        <a href="https://www.youtube.com/watch?v=X49i-SzaYEw">Amazon Drivers Urinate In Bottles To Keep Schedule</a>
+        (YouTube, 17 minutes, 16.12.2017). This video is based on an article in the British newspaper
+        <i class="newspaper">The Mirror</i>: 
+        <a href="http://www.mirror.co.uk/news/uk-news/amazon-drivers-forced-deliver-200-11668823">Amazon drivers forced to deliver 200 parcels a day with no time for toilet breaks while earning less than minimum wage</a>
+        (by Dan Warburton, 09.12.2017).
+        This is not strictly speaking about neoliberalism but about &ldquo;predatory capitalism&rdquo;.
       </li>
     </ul>
 
