Skype a Scientist; scientific literacy.

--- a/science/index.html
+++ b/science/index.html
@@ -76,14 +76,6 @@
         and how science works.
       </li>
       <li>
-        <a href="https://www.youtube.com/user/SenseAboutScience">Sense About Science</a>: 
-        the YouTube channel of the British charity
-        <a href="http://www.senseaboutscience.org/">Sense about Science</a>.
-        <!-- @@add to separate list of sites about science / scientific literacy
-          https://en.wikipedia.org/wiki/Sense_About_Science
-        -->
-      </li>
-      <li>
         <a href="https://www.youtube.com/playlist?list=PLhQpDGfX5e7CuUkPlpiW7agdJvdbdTPma">Think Like a Scientist</a> 
         is a playlist of videos by the Open University.
         <!-- See other playlists: https://www.youtube.com/user/OUlearn/playlists?view=1&sort=dd -->
@@ -157,6 +149,19 @@
       <a href="https://www.youtube.com/watch?v=0Rnq1NpHdmw">Last Week Tonight with John Oliver: Scientific Studies (<abbr>HBO</abbr>)</a>
       (20 minutes, YouTube).
     </p>
+
+    <p>Scientific literacy:</p>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/user/SenseAboutScience">Sense About Science</a>: 
+        the YouTube channel of the British charity
+        <a href="http://www.senseaboutscience.org/">Sense about Science</a>.
+        <!-- @@add to separate list of sites about science / scientific literacy
+          https://en.wikipedia.org/wiki/Sense_About_Science
+        -->
+      </li>
+      <li><a href="https://www.skypeascientist.com/">Skype a Scientist</a>.</li>
+    </ul>
 
     <h2>About Science in General</h2>
     <ul>
