Mann & Toles: The Madhouse Effect.

--- a/science/index.html
+++ b/science/index.html
@@ -861,6 +861,15 @@
         <a href="https://www.youtube.com/watch?v=I5HVVHRfT68">Climate Collapse Outpacing Scientific Models</a>
         (YouTube, 7 minutes, 05.11.2017).
       </li>
+      <li>Mann, Michael E.; Toles, Tom:
+        <i class="booktitle">The Madhouse Effect: How Climate Change Denial Is Threatening Our Planet, Destroying Our Politics, and Driving Us Crazy</i>.
+        Columbia University Press, September 2016.
+        <a href="https://cup.columbia.edu/book/the-madhouse-effect/9780231177863"><abbr>ISBN</abbr> 9780231177863</a> (hardcover).
+        <br />See also <a href="http://www.michaelmann.net/books/madhouse-effect">Michael E. Mann's website</a>
+        and
+        <a href="https://www.youtube.com/watch?v=Is2GyPYgAH8">Is The Trump Administration Attacking Climate Scientists? (w/Guest Michael Man)</a>
+        (Thom Hartmann Program, YouTube, 19.12.2017; 10 minutes).
+      </li>
       <!--
       <li>
         <a href=""></a>
