Democracy Now: CorkerKickback

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1943,6 +1943,13 @@
           (YouTube, 5 minutes, 04.11.2017). About the vote abolishing a Consumer Financial Protection Bureau regulation
           that allowed consumers to sue banks and credit agencies.
       </li>
+      <li>Democracy Now!:
+        <a href="https://www.youtube.com/watch?v=K9O5DuKvWwA">“CorkerKickback?”: Sen. Supports Tax Bill After Last-Minute Provision Would Personally Enrich Him</a>
+        (YouTube, 18.12.2017, 10 minutes). See also &lduo;The Winners and Losers of the Tax Bill&rdquo; in <i class="newspaper">The New York Times</i>
+        and
+        <a href="http://www.ibtimes.com/political-capital/donald-trump-gop-leaders-could-be-enriched-last-minute-tax-break-inserted-final">Donald Trump And GOP Leaders Could Be Enriched By Last Minute Tax Break Inserted Into Final Bill</a>
+        by David Sirota and Josh Keefe (<i class="website">International Business Times</i>, 15.12.2017.
+      </li>
       <li>David Pakman Show:
         <a href="https://www.youtube.com/watch?v=tmaGnH2Y65M">How Did Right Wingers Get So Obsessed with Ayn Rand?</a>
         (YouTube, 9 minutes, 18.06.2016). 
