Gindin & Panitch: Making of Global Capitalism

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1679,6 +1679,10 @@
           <p>A: Because there’s no American embassy there.</p>
         </blockquote>
       </li>
+      <li>Gindin, Sam; Panitch, Leo:
+        <i class="booktitle">The Making of Global Capitalism: The Political Economy of American Empire</i>.
+        Verso, 2013. <a href="https://www.versobooks.com/books/1527-the-making-of-global-capitalism"><abbr>ISBN</abbr> 9781781681367</a>.
+      </li>
     </ul>
 
     <h3>Neoliberalism</h3>
