--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1954,6 +1954,11 @@
         <a href="http://www.ibtimes.com/political-capital/donald-trump-gop-leaders-could-be-enriched-last-minute-tax-break-inserted-final">Donald Trump And GOP Leaders Could Be Enriched By Last Minute Tax Break Inserted Into Final Bill</a>
         by David Sirota and Josh Keefe (<i class="website">International Business Times</i>, 15.12.2017.
       </li>
+      <li>Democracy Now!:
+        <a href="https://www.youtube.com/watch?v=jfPuMxXFMe8">Kali Akuno: Tax Bill is One of Greatest Transfers of Wealth from Working Class to Rich in History</a>
+        (YouTube, 6 minutes, 18.12.2017).
+        Kali Akuno is co-author of <i class="booktitle">Jackson Rising: The Struggle for Economic Democracy and Black Self-Determination in Jackson, Mississippi</i>.
+      </li>
       <li>David Pakman Show:
         <a href="https://www.youtube.com/watch?v=tmaGnH2Y65M">How Did Right Wingers Get So Obsessed with Ayn Rand?</a>
         (YouTube, 9 minutes, 18.06.2016). 
