--- a/lijst.html
+++ b/lijst.html
@@ -71,6 +71,7 @@
       Vintage, 2011. (400 pages)
       <a href="https://www.penguin.co.uk/books/1036899/how-to-live/"><abbr>ISBN</abbr> 9780099485155</a>.
     </li>
+    <!--
     <li><del>Booth, Wayne C.; Colomb, Gregory C.; Williams, Joseph M.: 
       <i class="booktitle">The Craft of Research</i>.
       4th edition. University of Chicago Press, 2016.
@@ -78,6 +79,7 @@
       (3rd edition. University of Chicago Press, 2008.
       <abbr>ISBN</abbr> 978 02 26 06 56 63. (? 18 €))</del>
     </li>
+    -->
     <li>Weston, Anthony: <i class="booktitle">A Rulebook for Arguments</i>.
       4th edition. Hackett Publishing, 2008.
       <a href="https://www.hackettpublishing.com/a-rulebook-for-arguments"><abbr>ISBN</abbr> 978-0-87220-954-1</a>. (? 12 €)
@@ -323,6 +325,7 @@
       Cambridge University Press, 2012.
       <a href="http://www.cambridge.org/de/academic/subjects/literature/english-literature-general-interest/shakespeare-computers-and-mystery-authorship?format=PB"><abbr>ISBN</abbr> 9781107407084</a>.
     </li>
+    <!--
     <li><del>Salzman, Paul (editor): <i class="booktitle">An Anthology of Elizabethan Prose Fiction</i>. 
       Oxford University Press, 2008. (464 pages) 
       <a href="https://global.oup.com/academic/product/an-anthology-of-elizabethan-prose-fiction-9780199540570"><abbr>ISBN</abbr> 9780199540570</a>.
@@ -332,6 +335,7 @@
       Thomas Nashe's <i class="booktitle">The Unfortunate Traveller</i> and 
       Thomas Deloney's <i class="booktitle">Jack of Newbury</i>.)</del>
     </li>
+    -->
     <li>Kermode, Lloyd (editor): <i class="booktitle">Three Renaissance Usury Plays: The Three Ladies of London, Englishmen for My Money, The Hog Hath Lost His Pearl</i>.
       Manchester University Press, 2014. (396 pages)
       <a href="http://www.manchesteruniversitypress.co.uk/9780719072635/"><abbr>ISBN</abbr> 978-0-7190-7263-5</a>.
@@ -456,7 +460,10 @@
     </li>
     -->
   </ul>
-  <!-- Wasserstrom & Cunningham: China in the 21st Century: What Everyone Needs to Know. Third edition. OUP, April 2018: https://global.oup.com/academic/product/china-in-the-21st-century-9780190659080 -->
+  <!-- 
+    * Wasserstrom & Cunningham: China in the 21st Century: What Everyone Needs to Know. Third edition. OUP, April 2018: https://global.oup.com/academic/product/china-in-the-21st-century-9780190659080 
+    * Christopher Goscha: Vietnam: A New History. Little, Brown & co. / Hachette, 2016 (592 pages) ISBN 9780465094370. https://www.hachettebookgroup.com/titles/christopher-goscha/vietnam/9780465094370/ 
+  -->
 
   </main>
 
