--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -441,7 +441,7 @@
         <i class="booktitle">A Critical Introduction to Mao</i>. Cambridge University Press, 2010.
         <a href="http://www.cambridge.org/de/academic/subjects/history/east-asian-history/critical-introduction-mao?format=PB"><abbr>ISBN</abbr> 9780521711548</a>.
       </li>
-      <li>Schram, Stuart: 
+      <li><a href="https://en.wikipedia.org/wiki/Stuart_R._Schram">Schram, Stuart</a>: 
         <i class="booktitle">The Political Thought of Mao Tse-tung</i>. Enlarged and revised edition.
         Harmondsworth: Pelican Books / Penguin Books, 1969.
         <!-- <a href=""><abbr>ISBN</abbr> @@</a>. -->
@@ -570,9 +570,9 @@
 
     <h4>Deng Xiaoping</h4>
     <ul>
-      <li>Salisbury, Harrison E.: 
+      <li><a href="https://en.wikipedia.org/wiki/Harrison_Salisbury">Salisbury, Harrison E.</a>: 
         <i class="booktitle">The New Emperors: China in the Era of Mao and Deng</i>. Little, Brown &amp; <abbr>Co.</abbr>, 1992.
-        <abbr>ISBN</abbr> 0316809101.<!-- @@check book -->
+        <abbr>ISBN</abbr> 0316809101. (Out of print.)
       </li>
       <li>Vogel, Ezra F.: 
         <i class="booktitle">Deng Xiaoping and the Transformation of China</i>. Belknap Press / Harvard University Press, 2013. (928 pages)
@@ -2192,7 +2192,7 @@
       </li>
       <li lang="de">Berger, Michael: 
         <i class="booktitle">Karl Marx</i>. <abbr>UTB</abbr> Profile. <abbr>UTB</abbr> 3010. 
-        Paderborn: Wilhelm Fink, 2008.
+        Paderborn: Wilhelm Fink, 2008. (<span lang="en">Out of print.</span>)
         <!-- @@ISBN -->
       </li>
       <li>Tucker, Robert C., editor:
