"US Veteran: 'The Real Terrorist Was Me'"

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -2094,6 +2094,10 @@
         This is not strictly speaking about neoliberalism but about &ldquo;predatory capitalism&rdquo;.
       </li>
     </ul>
+    <!-- 
+      * The Ring of Fire: "Trump Wants To Cut Aide To American Children To Pay For Tax Cuts For The Wealthy", 4 minutes, 17.12.2017: https://www.youtube.com/watch?v=6nY-Tul5fYE
+      * The Majority Report with Sam Seder: "Obama Destroyed Black American Wealth While Bailing Out Wall Street", 10 minutes, 17.12.2017: https://www.youtube.com/watch?v=mvBmFjNt6xs - interview with Ryan Cooper 
+    -->
 
     <h3>The War Machine</h3>
     <ul>
@@ -2166,6 +2170,10 @@
         <a href="https://www.youtube.com/watch?v=LZE5YVOXBWk">If Tillerson's Out, is Iran War In?</a>
         (YouTube, 13 minutes, 30.11.2017): it looks like false arguments will be used to start a war against Iran,
         similar to the made-up &ldquo;weapons of mass destruction&rdquo; that were used as an excuse to start a war against Iraq. 
+      </li>
+      <li>Secular Talk:
+        <a href="https://www.youtube.com/watch?v=GxmhGZNuOdU">U.S. Veteran: 'The Real Terrorist Was Me'</a>
+        (YouTube, 9 minutes, 05.02.2015).
       </li>
       <!--
       <li>
