Evans & Jones: spying on campaign groups for corps.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -2093,6 +2093,16 @@
         (by Dan Warburton, 09.12.2017).
         This is not strictly speaking about neoliberalism but about &ldquo;predatory capitalism&rdquo;.
       </li>
+      <li>Evans, Rob; Jones, Meirion:
+        <a href="https://www.theguardian.com/world/2017/dec/12/surveillance-firms-spied-on-campaign-groups-for-big-companies-leak-shows">Surveillance firms spied on campaign groups for big companies, leak shows</a>,
+        <i class="newspaper">The Guardian</i>, 12.12.2017. The companies include British Airways, the Royal Bank of Scotland, Porsche and Caterpillar.
+        <br />Evans, Rob; Jones, Meirion: 
+        <a href="https://www.thebureauinvestigates.com/stories/2017-12-13/hidden-world-of-private-spies"><abbr title="Royal Bank of Scotland">RBS</abbr>, British Airways, Porsche, Caterpillar and the private spies</a>,
+        <i class="website">The Bureau of Investigative Journalism</i>, 13.13.2017.<!--@@PDF-->
+        <br />See also:
+        TheRealNews: <a href="https://www.youtube.com/watch?v=R3LgM_A_x48">Five Corporations Hire Two Intelligence Firms to Spy on Activists</a>
+        (YouTube, 5 minutes, 22.12.2017).
+      </li>
     </ul>
     <!-- 
       * The Ring of Fire: "Trump Wants To Cut Aide To American Children To Pay For Tax Cuts For The Wealthy", 4 minutes, 17.12.2017: https://www.youtube.com/watch?v=6nY-Tul5fYE
