Lent: The Patterning Instinct.

--- a/science/index.html
+++ b/science/index.html
@@ -1014,6 +1014,14 @@
 
     <h2>Unsorted Links</h2>
     <ul>
+      <li>Lent, Jeremy:
+        <a href="https://en.wikipedia.org/wiki/Jeremy_Lent#The_Patterning_Instinct"><i class="booktitle">The Patterning Instinct: A Cultural History of Humanity’s Search for Meaning</i></a>.
+        Prometheus Books, 2017.
+        <br />See also the playlist
+        <a href="https://www.youtube.com/playlist?list=PLjB5ng5SvNbLlm-_oT7sv_qEarbrTd4b4">The Patterning Instinct</a>
+        on the author's YouTube channel.
+        <!--book recommended by George Monbiot: https://www.youtube.com/watch?v=dBe7bNSBa0w -->
+      </li>
       <li>Sewell, Martin:
         <a href="http://no-free-lunch.org/">No Free Lunch Theorems</a>.
       </li>
