Runciman: A History of the Crusades.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -266,6 +266,14 @@
         -->
       </li>
     </ul>
+    <!--History of science in general:
+      * several of John Freely's books: https://en.wikipedia.org/wiki/John_Freely
+        * Flame of Miletus: The Birth of Science in Ancient Greece (and How it Changed the World) 
+        * Before Galileo: The Birth of Modern Science in Medieval Europe
+        * Light from the East: How the Science of Medieval Islam Helped to Shape the Western World
+        * Aladdin's Lamp: How Greek Science Came to Europe Through the Islamic World
+        * The Emergence of Western Science East and West.  İstanbul : Boğaziçi Üniversitesi, 2004. (539 pages) ISBN 9789755182353 : http://katalog.istanbul.edu.tr/client/tr_TR/default_tr/search/detailnonmodal?qu=Uygarl%C4%B1k+Tarihi&d=ent%3A%2F%2FSD_ILS%2F0%2FSD_ILS%3A129652~ILS~0&ps=300 
+    -->
 
     <h4>The Voyages of Zheng He</h4>
     <p><a href="https://en.wikipedia.org/wiki/Zheng_He">Zheng He</a> was a eunuch who led several 
@@ -678,6 +686,13 @@
       * Ryan Gingeras: Fall of the Sultanate: The Great War and the End of the Ottoman Empire 1908-1922. Oxford University Press, 2016: https://global.oup.com/academic/product/fall-of-the-sultanate-9780199676071 
       * Ronald Grigor Suny, Fatma Müge Göçek, and Norman M. Naimark, eds.: A Question of Genocide: Armenians and Turks at the End of the Ottoman Empire. Oxford University Press, 2011.
       * Donald Bloxham: The Great Game of Genocide: Imperialism, Nationalism, and the Destruction of the Ottoman Armenians. Oxford UP, 2007.
+      * Caroline Finkel: Osman's Dream, History of the Ottoman Empire 1300-1923. John Murray, 2005: https://en.wikipedia.org/wiki/Caroline_Finkel 
+      * several of John Freely's books: https://en.wikipedia.org/wiki/John_Freely 
+        * Jem Sultan: The Adventures of a Captive Turkish Prince in Renaissance Europe 
+        * Inside the Seraglio: Private Lives of the Sultans in Istanbul
+        * Storm on Horseback: The Seljuk Warriors of Turkey
+        * Istanbul: The Imperial City
+        * The Grand Turk: Sultan Mehmet II - Conqueror of Constantinople, Master of an Empire and Lord of Two Seas
     -->
     <h4>1177 <abbr>B.C.</abbr>: The Year Civilization Collapsed</h4>
     <ul>
@@ -756,6 +771,10 @@
       <li>Frankopan, Peter: 
         <i class="booktitle">The First Crusade: The Call from the East</i>.
         <a href="https://www.penguin.co.uk/books/1088774/the-first-crusade/">Vintage</a> (Penguin), 2013.
+      </li>
+      <li>Runciman, Steven:
+        <a href="https://en.wikipedia.org/wiki/A_History_of_the_Crusades"><i class="booktitle">A History of the Crusades</i></a>
+        (3 volumes, 1951–54).
       </li>
     </ul>
 
