Chunglin Kwa: Wat is waarheid?

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -245,6 +245,17 @@
         Joel Ballavian also recommends the book <i class="booktitle">Inference to the Best Explanation</i>
         by <a href="https://en.wikipedia.org/wiki/Peter_Lipton">Peter Lipton</a>.<!--@@move elsewhere w description of Joel Ballavian's channel. Review of Lipton's book: http://ndpr.nd.edu/news/inference-to-the-best-explanation-2nd-edition/-->
       </li>
+      <li lang="nl">Kwa, Chunglin:            
+        <i class="booktitle">Wat is waarheid? Basisboek wetenschapsfilosofie</i>.
+        Amsterdam: Boom, 2017.
+        <a href="https://www.boomfilosofie.nl/product/100-250_Wat-is-waarheid"><abbr>ISBN</abbr> 9789058758880</a>.
+        <br /><span lang="nl">This introduction to philosophy of science does not exclusively focus on the natural sciences,
+        but also on the humanities and the social sciences. It also considers philosophers after Kuhn, especially 
+        <a href="https://en.wikipedia.org/wiki/Ian_Hacking">Ian Hacking</a>, and 
+        <a href="https://en.wikipedia.org/wiki/Alistair_Cameron_Crombie">Alistair Crombie's</a>
+        <i class="booktitle">Styles of Scientific Thinking in the European Tradition: The History of Argument and Explanation Especially in the Mathematical and Biomedical Sciences and Arts</i> (Duckworth, 1994).
+        </span>
+      </li>
       <!-- 
         * Ladyman, James: Understanding Philosophy of Science. Routledge, 2001. 
           (In 2009, Massimo Pigliucci wrote, "Still, I'm planning to use this book next semester in a 300-level class on philosophy of science, and I'm looking forward to the puzzled reactions of my students when they'll begin to appreciate how little we understand about how science works." http://www.amazon.com/Understanding-Philosophy-Science-James-Ladyman/dp/0415221579/
