T. Hartmann: 2005 Letter to Mike Pence.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -2131,6 +2131,16 @@
         TheRealNews: <a href="https://www.youtube.com/watch?v=R3LgM_A_x48">Five Corporations Hire Two Intelligence Firms to Spy on Activists</a>
         (YouTube, 5 minutes, 22.12.2017).
       </li>
+      <li>Thom Hartmann Program:
+        <a href="https://www.youtube.com/watch?v=DyX4P0k2k7E">This Letter To Mike Pence Is Frightening Neoliberal Fantasy and it Might Become Reality</a>
+        (YouTube, 10 minutes, 27.12.2017).
+        <br />This is about an e-mail sent by Paul Teller on 13 September 2005, shortly after hurricane Katrina hit New Orleans.
+        See <a href="http://www.naomiklein.org/shock-doctrine/resources/part7/chapter20/pro-market-ideas-katrina">Pro-Free-Market Ideas for Responding to Hurricane Katrina and High Gas</a>
+        on Naomi Klein's website.<!--@@PDF-->
+        See also Naomi Klein's article
+        <a href="https://www.alternet.org/story/26022/purging_the_poor_from_new_orleans">Purging the Poor from New Orleans</a>
+        (<i class="website">Alternet</i>, 26.09.2005; originally published by <i class="website">The Nation</i>).
+      </li>
     </ul>
     <!-- 
       * The Ring of Fire: "Trump Wants To Cut Aide To American Children To Pay For Tax Cuts For The Wealthy", 4 minutes, 17.12.2017: https://www.youtube.com/watch?v=6nY-Tul5fYE
