Crily: Charlie Wilson's War

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -2223,6 +2223,13 @@
         <a href="https://www.youtube.com/watch?v=GxmhGZNuOdU">U.S. Veteran: 'The Real Terrorist Was Me'</a>
         (YouTube, 9 minutes, 05.02.2015).
       </li>
+      <li>George Crile III:
+        <i class="booktitle">Charlie Wilson's War: The Extraordinary Story of the Largest Covert Operation in History</i>.
+        Atlantic Monthly Press, 2003. Grove Paperback, 2007.
+        <a href="http://groveatlantic.com/book/charlie-wilsons-war/"><abbr>ISBN</abbr> 978-0-8021-4341-9</a>.
+        <br />See also
+        <a href="https://en.wikipedia.org/wiki/Operation_Cyclone">Operation Cyclone</a> (Wikipedia).
+      </li>
       <!--
       <li>
         <a href=""></a>
